crates/ars-components/src/overlay/hover_card/snapshots/ars_components__overlay__hover_card__tests__hover_card_content_fallback_label_snapshot.snap
---
source: crates/ars-components/src/overlay/hover_card/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "hover-card",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Hover card",
            ),
        ),
        (
            Id,
            String(
                "hover-card-content",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
